feat(calendar): add new colors and update layouts

--- a/customcalendar/src/main/res/layout/calendar_day_item.xml
+++ b/customcalendar/src/main/res/layout/calendar_day_item.xml
@@ -2,8 +2,10 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tv_calendar_day_item"
+    style="@style/Text_Paragraph"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white_app"
     android:gravity="center"
-    android:textSize="13sp"
+    android:paddingVertical="8dp"
     tools:text="31" />
