--- a/customcalendar/src/main/res/layout/custom_calendar_layout.xml
+++ b/customcalendar/src/main/res/layout/custom_calendar_layout.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white_app"
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_calendar_month"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white_app"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="7"
+        tools:itemCount="31"
+        tools:listitem="@layout/calendar_day_item" />
 </merge>
