--- a/customcalendar/src/main/res/layout/calendar_month_item.xml
+++ b/customcalendar/src/main/res/layout/calendar_month_item.xml
@@ -5,6 +5,7 @@
     style="@style/Text_SubHeading"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingHorizontal="16dp"
     android:background="@color/calendar_day_color"
     android:paddingVertical="20dp"
     android:textColor="@color/white_app"
