--- a/_example-calendar/src/main/res/layout/fragment_first.xml
+++ b/_example-calendar/src/main/res/layout/fragment_first.xml
@@ -12,19 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
+        app:dayBackgroundColor="@color/calendar_day_color"
+        app:dayTextColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:maxMultiSelectionDates="10"
         app:monthBackgroundColor="@color/black"
         app:monthTextColor="@color/white_app"
-        app:dayTextColor="@color/white"
-        app:dayBackgroundColor="@color/calendar_day_color"
-        app:weekDayBackgroundColor="@color/black"
-        app:weekDayTextColor="@color/white"
         app:selectedDayBackgroundColor="@color/dim_gray"
         app:selectedDayTextColor="@color/white"
-        app:selectionType="Single" />
+        app:selectionType="Single"
+        app:weekDayBackgroundColor="@color/black"
+        app:weekDayTextColor="@color/white" />
 
     <Button
         android:id="@+id/button_first"
