feat(calendar): implementing range selection

--- a/_example-calendar/src/main/res/layout/fragment_first.xml
+++ b/_example-calendar/src/main/res/layout/fragment_first.xml
@@ -22,7 +22,7 @@
         app:monthTextColor="@color/white_app"
         app:selectedDayBackgroundColor="@color/dim_gray"
         app:selectedDayTextColor="@color/white"
-        app:selectionType="Single"
+        app:selectionType="Range"
         app:weekDayBackgroundColor="@color/black"
         app:weekDayTextColor="@color/white" />
 
