feat(calendar): add current date; also change background color;

--- a/_example-calendar/src/main/res/layout/fragment_calendar_example.xml
+++ b/_example-calendar/src/main/res/layout/fragment_calendar_example.xml
@@ -44,8 +44,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="10dp"
-        app:dayBackgroundColor="@color/calendar_day_color"
-        app:dayTextColor="@color/white"
+        app:dayBackgroundColor="@color/white"
+        app:dayTextColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         app:maxMultiSelectionDates="10"
         app:monthBackgroundColor="@color/black"
         app:monthTextColor="@color/white_app"
-        app:selectedDayBackgroundColor="@color/dim_gray"
+        app:selectedDayBackgroundColor="@color/calendar_month_color"
         app:selectedDayTextColor="@color/white"
         app:selectionType="Single"
         app:weekDayBackgroundColor="@color/black"
