--- a/_example-calendar/src/main/res/layout/fragment_calendar_example.xml
+++ b/_example-calendar/src/main/res/layout/fragment_calendar_example.xml
@@ -12,9 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:paddingBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView"
+            style="@style/Text_Paragraph"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/calendar_selection_type"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Spinner
             android:id="@+id/spinner_selection_type"
@@ -22,21 +33,46 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="@+id/textView" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_selected_date_label"
             style="@style/Text_Paragraph"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/calendar_selection_type"
-            app:layout_constraintBottom_toBottomOf="@+id/spinner_selection_type"
+            android:layout_marginTop="14dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            tools:text="@string/selected_date_label" />
 
+        <TextView
+            android:id="@+id/tv_selected_date_value"
+            style="@style/Text_Paragraph"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/black"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_selected_date_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tv_selected_date_label"
+            app:layout_constraintTop_toTopOf="@+id/tv_selected_date_label" />
+
+        <Spinner
+            android:id="@+id/spinner_selected_dates"
+            style="@style/Text_Paragraph"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_selected_date_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tv_selected_date_label"
+            app:layout_constraintTop_toTopOf="@+id/tv_selected_date_label"
+            tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <br.com.bonaldi.customcalendar.CustomCalendar
