--- a/_example-calendar/src/main/res/values/themes.xml
+++ b/_example-calendar/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
-        <item name="android:itemTextAppearance">@style/Text_Paragraph</item>
+        <item name="android:itemTextAppearance">@style/Calendar_Text_Paragraph</item>
         <!-- Customize your theme here. -->
     </style>
 
