--- a/customcalendar/src/main/res/layout/calendar_day_item_empty.xml
+++ b/customcalendar/src/main/res/layout/calendar_day_item_empty.xml
@@ -4,6 +4,7 @@
     android:id="@+id/view_empty_state"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/calendar_day_color"
     android:gravity="center"
-    android:paddingVertical="8dp" />
+    android:paddingVertical="8dp"
+    style="@style/CalendarEmptyItem"
+    tools:background="@color/calendar_day_color" />
