--- a/customcalendar/src/main/res/layout/calendar_month_item.xml
+++ b/customcalendar/src/main/res/layout/calendar_month_item.xml
@@ -2,11 +2,10 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tv_month_name"
-    style="@style/Text_SubHeading"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    style="@style/CalendarMonthName"
     android:paddingHorizontal="16dp"
-    android:background="@color/calendar_day_color"
     android:paddingVertical="20dp"
-    android:textColor="@color/white_app"
+    android:textSize="20sp"
     tools:text="Janeiro - 2022" />
