--- a/customcalendar/src/main/res/color/calendar_day_item_background.xml
+++ b/customcalendar/src/main/res/color/calendar_day_item_background.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="?attr/selectedDayBackgroundColor" android:state_selected="true"/>
     <item android:color="?attr/dayBackgroundColor" android:state_selected="false"/>
+    <item android:color="?attr/disabledDayBackgroundColor" android:state_enabled="false"/>
     <item android:color="?attr/dayBackgroundColor"/>
 </selector>
