--- a/customcalendar/src/main/res/color/calendar_day_item_text_color.xml
+++ b/customcalendar/src/main/res/color/calendar_day_item_text_color.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="?attr/selectedDayTextColor" android:state_selected="true"/>
-    <item android:color="?attr/dayTextColor" android:state_selected="false"/>
+    <item android:color="?attr/selectedDayTextColor" android:state_selected="true" android:state_enabled="true"/>
+    <item android:color="?attr/dayTextColor" android:state_selected="false" android:state_enabled="true"/>
+    <item android:color="?attr/disabledDayTextColor" android:state_enabled="false"/>
     <item android:color="?attr/dayTextColor"/>
 </selector>
