--- a/customcalendar/src/main/res/values/styles.xml
+++ b/customcalendar/src/main/res/values/styles.xml
@@ -12,6 +12,8 @@
         <item name="selectedDayBackgroundColor">@color/black</item>
         <item name="selectedDayTextColor">@color/white_app</item>
         <item name="currentDateColor">@color/black</item>
+        <item name="disabledDayBackgroundColor">@color/white_app</item>
+        <item name="disabledDayTextColor">@color/disabled_day_color</item>
     </style>
 
     <style name="CustomCalendarBaseText">
